# phyudm

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  NOTICE  README.md  clippy.toml  udm_spec.md
.github/workflows/: rust-ci.yml  schema-ci.yml
conformance/: README.md
conformance/edge/: edge-all-23-domains-empty.json  edge-all-23-domains-empty.meta.yaml  edge-empty-domains.json  edge-empty-domains.meta.yaml  edge-event-type-custom.json  edge-event-type-custom.meta.yaml  edge-extensions-license-metadata.json  edge-extensions-license-metadata.meta.yaml  edge-large-numbers.json  edge-large-numbers.meta.yaml  edge-location-boundary-coords.json  edge-location-boundary-coords.meta.yaml  edge-location-south-pole.json  edge-location-south-pole.meta.yaml  edge-min-required-only.json  edge-min-required-only.meta.yaml  edge-optional-envelope-fields.json  edge-optional-envelope-fields.meta.yaml  edge-precise-timestamps.json  edge-precise-timestamps.meta.yaml  edge-provenance-and-extensions.json  edge-provenance-and-extensions.meta.yaml  edge-rich-extensions.json  edge-rich-extensions.meta.yaml  edge-source-type-custom.json  edge-source-type-custom.meta.yaml  edge-unicode-strings.json  edge-unicode-strings.meta.yaml  edge-zero-and-empty-collections.json  edge-zero-and-empty-collections.meta.yaml
conformance/invalid/: compute-load-average-wrong-arity.json  compute-load-average-wrong-arity.meta.yaml  coordination-bad-fleet-role.json  coordination-bad-fleet-role.meta.yaml  envelope-bad-captured-at.json  envelope-bad-captured-at.meta.yaml  envelope-bad-event-type-spec-form.json  envelope-bad-event-type-spec-form.meta.yaml  envelope-bad-event-type.json  envelope-bad-event-type.meta.yaml  envelope-bad-sequence-num.json  envelope-bad-sequence-num.meta.yaml  envelope-bad-source-type.json  envelope-bad-source-type.meta.yaml  envelope-bad-version-format.json  envelope-bad-version-format.meta.yaml  envelope-empty-event-id.json  envelope-empty-event-id.meta.yaml  envelope-missing-captured_at.json  envelope-missing-captured_at.meta.yaml  envelope-missing-event_id.json  envelope-missing-event_id.meta.yaml  envelope-missing-event_type.json  envelope-missing-event_type.meta.yaml  envelope-missing-source_id.json  envelope-missing-source_id.meta.yaml  envelope-missing-source_type.json  envelope-missing-source_type.meta.yaml  envelope-missing-udm_version.json  envelope-missing-udm_version.meta.yaml  envelope-non-string-source-id.json  envelope-non-string-source-id.meta.yaml  extensions-non-object.json  extensions-non-object.meta.yaml  hri-bad-interaction-state.json  hri-bad-interaction-state.meta.yaml  hri-negative-human-count.json  hri-negative-human-count.meta.yaml  identity-bad-mac.json  identity-bad-mac.meta.yaml  (+52 more)
conformance/legacy/: 01-phycloud-udm-event-request.json  01-phycloud-udm-event-request.meta.yaml
conformance/valid/: ai-decision-trace.json  ai-decision-trace.meta.yaml  audio-alarm-detection.json  audio-alarm-detection.meta.yaml  cobot-grasp-success.json  cobot-grasp-success.meta.yaml  compliance-iso-attestation.json  compliance-iso-attestation.meta.yaml  domain-01-identity.json  domain-01-identity.meta.yaml  domain-02-location.json  domain-02-location.meta.yaml  domain-03-motion.json  domain-03-motion.meta.yaml  domain-04-power.json  domain-04-power.meta.yaml  domain-05-operational.json  domain-05-operational.meta.yaml  domain-06-navigation.json  domain-06-navigation.meta.yaml  domain-07-perception.json  domain-07-perception.meta.yaml  domain-08-safety.json  domain-08-safety.meta.yaml  domain-09-actuators.json  domain-09-actuators.meta.yaml  domain-10-communication.json  domain-10-communication.meta.yaml  domain-11-compute.json  domain-11-compute.meta.yaml  domain-12-ai.json  domain-12-ai.meta.yaml  domain-13-maintenance.json  domain-13-maintenance.meta.yaml  domain-14-context.json  domain-14-context.meta.yaml  domain-15-payload.json  domain-15-payload.meta.yaml  domain-16-manipulation.json  domain-16-manipulation.meta.yaml  (+94 more)
crates/udm-cli/: Cargo.toml  README.md
crates/udm-cli/src/: cli.rs  compliance.rs  lib.rs  main.rs  output.rs  schemas.rs  store.rs
crates/udm-cli/src/commands/: aggregate.rs  audit.rs  conformance.rs  correlate.rs  explain.rs  filter_expr.rs  get.rs  mod.rs  query.rs  schema.rs  template.rs  timeline.rs  validate.rs
crates/udm-cli/tests/: cli_integration.rs
crates/udm-eventstore/: Cargo.toml  README.md
crates/udm-eventstore-memory/: Cargo.toml  README.md
crates/udm-eventstore-memory/src/: lib.rs
crates/udm-eventstore-memory/tests/: conformance.rs
crates/udm-eventstore-phycloud/: Cargo.toml  README.md
crates/udm-eventstore-phycloud/src/: lib.rs
crates/udm-eventstore/src/: conformance.rs  error.rs  event.rs  lib.rs  query.rs  store.rs
crates/udm-eventstore/test-data/: conformance.ndjson
crates/udm-mcp/: Cargo.toml  README.md
crates/udm-mcp/src/: lib.rs  main.rs  server.rs  store.rs  util.rs
crates/udm-mcp/src/tools/: compliance.rs  filter_expr.rs  mod.rs  requests.rs  schemas.rs
crates/udm-mcp/tests/: mcp_integration.rs
docs/ai-cookbook/: 01-wire-into-client.md  02-incident-reconstruction.md  03-compliance-audit.md  04-fleet-health-qa.md  README.md  build_datasets.py
examples/: mobile_robot_safety_compliance.md
schemas/v0.0.3/: envelope.schema.json  event.schema.json  object_ref.schema.json
spec/: appendix-a.md  appendix-b.md  appendix-c.md  changelog.md  data-quality.md  design-principles.md  envelope.md  event-example.md  event-types.md  evolution.md  implementation-notes.md  index.md  object-references.md  otel.md  overview.md  provenance.md  schema-versioning.md  source-types.md  streaming.md  udm-spec.md  versioning.md
spec/domains/: 01-identity.md  02-location.md  03-motion.md  04-power.md  05-operational-state.md  06-navigation.md  07-perception.md  08-safety.md  09-actuators.md  10-communication.md  11-compute.md  12-ai-reasoning.md  13-maintenance.md  14-context.md  15-payload-cargo.md  (+9 more)
tools/: README.md  build_conformance.py  build_schemas.py  changelog_check.py  validate.py
(+27 files in other folders)
