[workspace]
resolver = "2"
members = [
    "crates/udm-eventstore",
    "crates/udm-eventstore-memory",
    "crates/udm-eventstore-phycloud",
]

[workspace.package]
version = "0.0.3"
authors = ["The PhyUDM Authors"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/chrisherczeg/phyudm"
rust-version = "1.82"

[workspace.dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "sync"] }
tokio-stream = "0.1"
uuid = { version = "1", features = ["v7", "serde"] }

# Dev / test deps shared across crates.
pretty_assertions = "1"
serde_yaml = "0.9"

[workspace.lints.clippy]
# Mirror the lint surface used elsewhere in the PhyUDM/PhyWare ecosystem so
# every crate has the same gate.
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Targeted relaxations — these triggered on otherwise-clean code.
multiple_crate_versions = "allow"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
similar_names = "allow"
struct_excessive_bools = "allow"
too_many_lines = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
items_after_statements = "allow"
doc_markdown = "allow"
too_long_first_doc_paragraph = "allow"
missing_const_for_fn = "allow"
needless_pass_by_value = "allow"
significant_drop_tightening = "allow"
option_if_let_else = "allow"
single_call_fn = "allow"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
