[package]
name = "udm-eventstore-memory"
description = "In-process Vec<UdmEvent> adapter for udm-eventstore — testing, demos, cookbook reproducibility."
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["udm", "phyudm", "telemetry", "robotics"]
categories = ["api-bindings", "data-structures"]

[dependencies]
udm-eventstore = { path = "../udm-eventstore", version = "0.0.3" }
async-trait = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util"] }
tokio-stream = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
pretty_assertions = { workspace = true }

[lints]
workspace = true
