[package]
name = "udm-eventstore-phycloud"
description = "PhyCloud adapter for udm-eventstore (stub — full implementation lands with PhyWare#307/#308)."
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["udm", "phyudm", "phycloud", "telemetry", "robotics"]
categories = ["api-bindings", "data-structures"]

[dependencies]
udm-eventstore = { path = "../udm-eventstore", version = "0.0.3" }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
