[package]
name = "udm-eventstore"
description = "UdmEventStore adapter trait + supporting types for UDM analysis tooling."
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["udm", "phyudm", "telemetry", "robotics", "mcp"]
categories = ["api-bindings", "data-structures"]

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
pretty_assertions = { workspace = true }

[lints]
workspace = true
